fp-macros/tests/ui/apply_invalid_syntax.stderr
error[E0405]: cannot find trait `Kind_bd4ddc17b95f4bc6` in this scope
 --> tests/ui/apply_invalid_syntax.rs:6:14
  |
6 |       type T = Apply!(
  |  ______________^
7 | |         brand: MyBrand,
8 | |         signature: (i32 +)
9 | |     );
  | |_____^ not found in this scope
  |
  = note: this error originates in the macro `Apply` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0404]: expected trait, found builtin type `i32`
 --> tests/ui/apply_invalid_syntax.rs:8:21
  |
8 |         signature: (i32 +)
  |                     ^^^ not a trait
